--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Help") %>
 
 <body style="background-color: #99ff66">
 <h1>Help</h1>
@@ -8,5 +9,4 @@
   <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
   book</a>.
 </p>
-
 </body>
