--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, @user.name) %>
+<body style="background-color: #00ffff">
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -9,3 +10,4 @@
     </section>
   </aside>
 </div>
+</body>
